# Simulator-Parallel_SAT_Solver

./: CMakeLists.txt  README.md
core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h
mtl/: template.mk
simp/: Main.cc  SimpSolver.cc  SimpSolver.h
